2006-07-06  Don Allingham  <don@gramps-project.org>
	* help/C/gramps-manual.xml: update doc
	
2006-07-06  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.post_load_newdb): Register
	custom formats after loading the db.
	* src/GrampsCfg.py: Switch to use new formats (still in progress).
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.__init__): Set up
	custom name formats list.
	* src/GrampsDb/_DbUtils.py (db_copy): Copy custom name formats.
	* src/GrampsDb/_ReadXML.py (start_format): Parse custom formats.
	* src/GrampsDb/_WriteXML.py (write_name_formats): Add method.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB._load_metadata) 
	(GrampsBSDDB._close_metadata): load and save name_formats.
	* src/Editors/_EditName.py (EditName._setup_fields): Use proper
	format lists.
	* src/NameDisplay.py: Support new name formats scheme.
	* src/RelLib/_Name.py (Name.DEFAULT_FORMATS): Add list of formats.

2006-07-05  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditChildRef.py: fix title
	* src/Editors/_EditFamily.py: call sequence for EditChildRef 
	* src/glade/gramps.glade: childref label fix
	* src/ManagedWindow.py: spacking
	* help/C/gramps-manual.xml: text updates
	* help/C/figures/select-family.png: added
	* help/C/figures/select-person.png: added
	* help/C/figures/family-warn.png: added
	* help/C/figures/child-ref.png: added
	* help/C/figures/edit-family.png: added
	* help/C/figures/gedcom-export.png: updated
	* help/C/figures/export-druid.png: updated

2006-07-04  Don Allingham  <don@gramps-project.org>
	* various: pyflakes fixes

2006-07-04  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsWidgets.py (hand_cursor): Use HAND2 instead of HAND1.

2006-07-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PlaceView.py (PlaceView.ui_definition): 
	add google maps to tool bar

2006-07-03  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PlaceView.py: add attempt to map to google maps,
	check for valid list