@@ -1,4 +1,5 @@
 2006-07-06  Don Allingham  <don@gramps-project.org>
+	* src/GrampsCfg.py: add cell renderer to combobox
 	* help/C/gramps-manual.xml: update doc
 	
 2006-07-06  Alex Roitman  <shura@gramps-project.org>
